<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000"
    android:orientation="vertical"
    tools:context="com.capsane.simplecamera.LaunchCameraActivity">

    <FrameLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        >

        <ImageView
            android:contentDescription="@string/take_picture"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:src="@mipmap/take_picture"
            />

    </FrameLayout>



    <LinearLayout
        android:id="@+id/linear_menu"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="@color/colorWhite"
        >

        <Button
            style="?android:attr/buttonBarButtonStyle"
            android:text="@string/wpmd"
            android:id="@+id/btn_menu_point"

            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent" />

        <Button
            style="?android:attr/buttonBarButtonStyle"
            android:id="@+id/btn_menu_macro"

            android:text="@string/hgqz"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent" />

        <Button
            style="?android:attr/buttonBarButtonStyle"
            android:id="@+id/btn_menu_micro"

            android:text="@string/wgqz"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent" />

        <Button
            style="?android:attr/buttonBarButtonStyle"
            android:id="@+id/btn_menu_record"
            android:text="@string/xxlr"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent" />

        <Button
            style="?android:attr/buttonBarButtonStyle"
            android:id="@+id/btn_menu_compare"
            android:text="@string/ksbd"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent" />


    </LinearLayout>

</LinearLayout>