<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.capsane.simplecamera.RecordActivity">

    <TextView
        android:id="@+id/tv_art_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/art_id_"
        android:textSize="20sp"
        app:layout_constraintTop_toTopOf="@+id/et_art_id"
        app:layout_constraintBottom_toBottomOf="@+id/et_art_id"
        />
    <TextView
        android:id="@+id/tv_human_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/human_name_"
        android:textSize="20sp"
        app:layout_constraintTop_toTopOf="@+id/et_human_name"
        app:layout_constraintBottom_toBottomOf="@id/et_human_name"
        />

    <EditText
        android:id="@+id/et_art_id"
        android:hint="@string/art_id"
        android:inputType="text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="20dp"
        app:layout_constraintLeft_toRightOf="@id/barrier"
        />

    <EditText
        android:id="@+id/et_human_name"
        android:hint="@string/human_name"
        android:layout_width="0dp"
        android:inputType="text"
        android:layout_height="wrap_content"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_art_id"
        android:layout_marginTop="20dp"
        app:layout_constraintLeft_toRightOf="@id/barrier"
        />

    <android.support.constraint.Barrier
        android:id="@+id/barrier"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="right"
        app:constraint_referenced_ids="tv_art_id, tv_human_name"
        />

    <Button
        android:id="@+id/button_finish"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="20dp"
        android:text="@string/finish"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</android.support.constraint.ConstraintLayout>
