<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.capsane.simplecamera.PhotoFragment">

    <FrameLayout
        android:id="@+id/title_layout"
        android:background="@color/colorAccent"
        android:layout_width="0dp"
        android:layout_height="40dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <TextView
        android:id="@+id/photo_fragment_title"
        android:text="@string/title"
        android:layout_gravity="center_horizontal"
        android:gravity="center_vertical"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:textSize="20sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        />

    <ImageView
        android:id="@+id/image_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/title_layout"
        android:contentDescription="@string/pictureDescription" />


    <Button
        android:id="@+id/button_return"
        android:text="@string/rePhoto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="10dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginStart="20dp"
        />

    <Button
        android:id="@+id/button_next"
        android:text="@string/next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="10dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginEnd="20dp"

        />

</android.support.constraint.ConstraintLayout>
