<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:background="@color/colorTitleBackground"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_alignParentTop="true"
        android:gravity="center">

        <TextView
            android:text="@string/title"
            android:id="@+id/loc_title"
            android:textSize="20sp"
            android:gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="match_parent" />
    </RelativeLayout>

    <ImageView
        android:src="@mipmap/ic_launcher"
        android:id="@+id/image_micro"
        android:layout_width="500dp"
        android:layout_height="1000dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/title"
        app:layout_constraintBottom_toTopOf="@+id/guidline_h_bottom"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="@id/guidline_v"
        app:layout_constraintTop_toTopOf="@+id/guidline_h_top" />

    <ImageView
        android:src="@mipmap/ic_launcher"
        android:id="@+id/image_loc1"
        android:layout_width="200dp"
        android:layout_height="400dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/title"
        app:layout_constraintLeft_toRightOf="@+id/guidline_v"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guidline_h_top" />

    <ImageView
        android:src="@mipmap/ic_launcher"
        android:id="@+id/image_loc2"
        android:layout_width="200dp"
        android:layout_height="400dp"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="20dp"
        android:contentDescription="@string/title"
        app:layout_constraintBottom_toTopOf="@+id/guidline_h_bottom"
        app:layout_constraintLeft_toRightOf="@+id/guidline_v"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/image_loc1" />

    <android.support.constraint.Guideline
        android:id="@+id/guidline_h_top"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.1" />

    <android.support.constraint.Guideline
        android:id="@+id/guidline_h_bottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.9" />

    <android.support.constraint.Guideline
        android:id="@+id/guidline_v"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.65" />

    <Button
        android:id="@+id/button_loc_return"
        android:text="@string/rePhoto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="50dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginStart="100dp"
        />

    <Button
        android:id="@+id/button_loc_next"
        android:text="@string/next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="50dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginEnd="100dp"

        />


</android.support.constraint.ConstraintLayout>
